# IoT-Laite

./: CMakeLists.txt  README.md
include/: camera_db.h  freertos_host_shim.h
src/: camera_db.c  freertos_host_shim.c  main.c
tools/: generate_camera_db_from_osm.py
